# src/swagger.yaml
@@ -13,6 +13,22 @@ servers:
 # GET    /posts
 # POST   /posts
 paths: 
+  /api/v1/posts/find/{keywords}:
+    get: 
+      description: Get posts, full-text search on title and body
+      parameters:      
+        - in: path
+          name: keywords
+          type: string 
+          example: exercitationem
+      responses:
+        200: 
+          description: Success response
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/posts"
+
   /api/v1/posts:
     get: 
       description: Get all posts
